1999-07-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/libdb/ldap.c:
	    Reorganized things:
		Do connect+bind to DB at  ldap_open()
		Do ONLY queries at ldap_search()
		Do dissociation at ldap_close()
	
	* libsh/builtin.c:
	    A bug in handling of  $(lreplace ... )  internal conscell
	    chains polluted wrong objects with call parameters.  Adding
	    one strategic copy-chain solved it.

1999-06-30  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpauth.c, smtpserver/smtpcmds.c, smtpserver/smtphelp.c,
	  smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    A change in logging; make individual input sessions stand out
	    better by using constructed log line prefix; pppppTTTT[rw#-]
	    where "ppppp" is "%05d" of process pid. "TTTT" are chars in
	    range A thru Z, and are derived from log open time system time-
	    stamp as lowest 4 of base26 "digits" (0 = "A", 25 = "Z").
	    Now doing "egrep ^pppppTTTT smtpserver.log" should pick only
	    the interesting session...

1999-06-29  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/dateparse.c:
	     Fixes for Y2K-correct date parsing; although this
	     is dead code whose result is ignored, it still
	     apparently gets called...  Thanks Ken!

	* TODO:
	    Found major pain (problem, if you will) in the
	    LDAP interface code for the router.  It does server
	    connection and DB bind for *every* query :-(
	
	* transports/smtp/smtp.c:
	    Arkadiusz Mi?kiewicz <misiek@pld.org.pl> reported
	    compilation and operation problems in his IPv6
	    environment.  Turns out a  getnameinfo()  request
	    block parametrization bug prevented 'IPv6 AAAA only'
	    hosts from even being *found* for the data lookup.

	* configure.in, config.h.in, acconfig.h, libc.h:
	    Autoconfigure compilation sense of  'socklen_t' for
	    possible use of --with-ipv6-replacement-libc and then
	    smtp.c in mode where  getnameinfo() routine can be
	    debugged...

	* scheduler/threads.c, scheduler/transports.c: